--- a/extra/haskell-shakespeare/PKGBUILD
+++ b/extra/haskell-shakespeare/PKGBUILD
@@ -3,8 +3,8 @@
 
 _hkgname=shakespeare
 pkgname=haskell-shakespeare
-pkgver=2.1.0.1
-pkgrel=108
+pkgver=2.1.3
+pkgrel=1
 pkgdesc="A toolkit for making compile-time interpolated templates"
 url="https://www.yesodweb.com/book/shakespearean-templates"
 license=("MIT")
@@ -12,8 +12,16 @@ arch=('x86_64')
 depends=('ghc-libs' 'haskell-aeson' 'haskell-blaze-html' 'haskell-blaze-markup' 'haskell-file-embed'
          'haskell-scientific' 'haskell-th-lift' 'haskell-unordered-containers' 'haskell-vector')
 makedepends=('ghc' 'haskell-hspec' 'haskell-hunit')
-source=("https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz")
-sha512sums=('c265dcf07f2f355cd2614d882b5bd73a9b7239b3c2b6482d326be5137051ee630b5495c80fb3855e182a4a8db385c7b7b2cc083047996ae1e4ad31fdd1fbbd84')
+source=("https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz"
+        $pkgname-$pkgver-en.msg::https://raw.githubusercontent.com/yesodweb/shakespeare/refs/tags/v2.1.3/other-messages/en.msg)
+sha512sums=('83d5028b65dae285b7e02fdbff166357ac0a11430ffeb9afceb2d5ca6cb81ca9c218210f3e9005a006c3a5bd2450828a7be47b46b46b1be6df316e58ab191041'
+            'd5ff4a61c254743d350448a166b6371e27c414c05e805ebe9be3dac8d2cbc5e922d6844c0297ec5a278bf9b3c868dc7ee8aba4ce09cee6e0a2953f61ead8d998')
+
+prepare() {
+    cd $_hkgname-$pkgver
+    mkdir other-messages
+    mv ../$pkgname-$pkgver-en.msg other-messages/en.msg
+}
 
 build() {
     cd $_hkgname-$pkgver
