--- a/extra/haskell-paramtree/PKGBUILD
+++ b/extra/haskell-paramtree/PKGBUILD
@@ -3,7 +3,7 @@
 _hkgname=paramtree
 pkgname=haskell-paramtree
 pkgver=0.1.2
-pkgrel=1
+pkgrel=3
 pkgdesc="Generate labelled test/benchmark trees from sets of parameters"
 url="https://github.com/merijn/paramtree"
 license=('BSD-3-Clause')
@@ -16,13 +16,13 @@ sha256sums=('3637b5bbdf969f67e63596ccbdb9c779c2de3272dd0131e3f58dfab290a16061')
 build() {
   cd $_hkgname-$pkgver
 
-  runhaskell Setup configure -O --enable-shared --enable-executable-dynamic --disable-library-vanilla \
+  runhaskell Setup configure -O --enable-shared --enable-debug-info --enable-executable-dynamic --disable-library-vanilla \
     --prefix=/usr --docdir=/usr/share/doc/$pkgname --datasubdir=$pkgname --enable-tests \
     --dynlibdir=/usr/lib --libsubdir=\$compiler/site-local/\$pkgid \
     --ghc-option=-optl-Wl\,-z\,relro\,-z\,now \
     --ghc-option='-pie' 
 
-  runhaskell Setup build
+  runhaskell Setup build $MAKEFLAGS
   runhaskell Setup register --gen-script
   runhaskell Setup unregister --gen-script
   sed -i -r -e "s|ghc-pkg.*update[^ ]* |&'--force' |" register.sh
@@ -31,7 +31,7 @@ build() {
 
 check() {
   cd $_hkgname-$pkgver
-  runhaskell Setup test
+  runhaskell Setup test --show-details=direct
 }
 
 package() {
