--- a/extra/haskell-prettyprinter-ansi-terminal/PKGBUILD
+++ b/extra/haskell-prettyprinter-ansi-terminal/PKGBUILD
@@ -3,21 +3,28 @@
 _hkgname=prettyprinter-ansi-terminal
 pkgname=haskell-prettyprinter-ansi-terminal
 pkgver=1.1.3
-pkgrel=226
+pkgrel=233
 pkgdesc="ANSI terminal backend for the prettyprinter package."
 url="https://github.com/quchen/prettyprinter/tree/master/prettyprinter-ansi-terminal"
 license=('custom:BSD2')
 arch=('x86_64')
 depends=('ghc-libs' 'haskell-ansi-terminal' 'haskell-prettyprinter')
-makedepends=('ghc' 'haskell-doctest')
+makedepends=('ghc')
+checkdepends=('haskell-doctest')
 source=(https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz)
 sha512sums=('985e965f78c767234b9f30e9cc1590d037e00d211385ebfa833b96f9b9aa092840e2587236d848c66ff1c58c97748f6ae9bd5cc02ea5175aa66d2654392ea1b6')
 
 build() {
     cd $_hkgname-$pkgver
-    
+
+    if (( CHECKFUNC )); then
+        _opts=('--enable-tests')
+    else
+        _opts=('--disable-tests')
+    fi
+
     runhaskell Setup configure -O --enable-shared --enable-debug-info --enable-executable-dynamic --disable-library-vanilla \
-        --prefix=/usr --docdir=/usr/share/doc/$pkgname --datasubdir=$pkgname --enable-tests \
+        --prefix=/usr --docdir=/usr/share/doc/$pkgname --datasubdir=$pkgname "${_opts[@]}" \
         --dynlibdir=/usr/lib --libsubdir=\$compiler/site-local/\$pkgid \
             -f-buildReadme
     runhaskell Setup build $MAKEFLAGS
