Updated haskell-optparse-applicative 0.18.1.0-7

--- a/extra/haskell-optparse-applicative/PKGBUILD
+++ b/extra/haskell-optparse-applicative/PKGBUILD
@@ -4,17 +4,18 @@
 
 _hkgname=optparse-applicative
 pkgname=haskell-optparse-applicative
-pkgver=0.17.1.0
-pkgrel=96
+pkgver=0.18.1.0
+pkgrel=7
 pkgdesc="Utilities and combinators for parsing command line options"
 url="https://github.com/pcapriotti/optparse-applicative"
-license=("BSD")
+license=('BSD-3-Clause')
 arch=('x86_64')
-depends=('ghc-libs' 'haskell-ansi-wl-pprint' 'haskell-transformers-compat')
+depends=('ghc-libs' 'haskell-prettyprinter' 'haskell-prettyprinter-ansi-terminal'
+         'haskell-transformers-compat')
 makedepends=('ghc')
 checkdepends=('haskell-quickcheck')
 source=("https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz")
-sha512sums=('02abfed7f0522d69568b96faafbebe96b6a2a1e7763e769d7d3a2af0c7c3530f8d1d2fb41e33e0d1c837f94c4040cc0c8ab0095482245a614e4400a8c33e521b')
+sha512sums=('a5a7667cadd3c2785d787cb6bddb009750308376c771f45d72e2245577f42c2946a069bf420d3404653f9f3662cb798341ee96d1ead35dbf95ab42447698e41d')
 
 build() {
     cd $_hkgname-$pkgver
