--- a/extra/haskell-pipes-safe/PKGBUILD
+++ b/extra/haskell-pipes-safe/PKGBUILD
@@ -3,7 +3,7 @@
 _hkgname=pipes-safe
 pkgname=haskell-pipes-safe
 pkgver=2.3.5
-pkgrel=1
+pkgrel=4
 pkgdesc="Safety for the pipes ecosystem"
 url="https://github.com/Gabriella439/Haskell-Pipes-Safe-Library"
 license=('BSD-3-Clause')
@@ -16,13 +16,13 @@ sha256sums=('f0b2d191a8a86edd5efeadd2a3af785a0b889222720f27b2fbe69d54fc53d78e')
 build() {
   cd $_hkgname-$pkgver
 
-  runhaskell Setup configure -O --enable-shared --enable-executable-dynamic --disable-library-vanilla \
+  runhaskell Setup configure -O --enable-shared --enable-debug-info --enable-executable-dynamic --disable-library-vanilla \
     --prefix=/usr --docdir=/usr/share/doc/$pkgname --datasubdir=$pkgname --enable-tests \
     --dynlibdir=/usr/lib --libsubdir=\$compiler/site-local/\$pkgid \
     --ghc-option=-optl-Wl\,-z\,relro\,-z\,now \
     --ghc-option='-pie' 
 
-  runhaskell Setup build
+  runhaskell Setup build $MAKEFLAGS
   runhaskell Setup register --gen-script
   runhaskell Setup unregister --gen-script
   sed -i -r -e "s|ghc-pkg.*update[^ ]* |&'--force' |" register.sh
@@ -31,7 +31,7 @@ build() {
 
 check() {
   cd $_hkgname-$pkgver
-  runhaskell Setup test
+  runhaskell Setup test --show-details=direct
 }
 
 package() {
