Updated haskell-prettyprinter 1.7.1-228

--- a/extra/haskell-prettyprinter/PKGBUILD
+++ b/extra/haskell-prettyprinter/PKGBUILD
@@ -3,22 +3,29 @@
 _hkgname=prettyprinter
 pkgname=haskell-prettyprinter
 pkgver=1.7.1
-pkgrel=223
+pkgrel=228
 pkgdesc="A modern, easy to use, well-documented, extensible prettyprinter."
 url="https://github.com/quchen/prettyprinter"
 license=('BSD')
 arch=('x86_64')
 depends=('ghc-libs')
-makedepends=('ghc' 'haskell-doctest' 'haskell-pgp-wordlist' 'haskell-quickcheck-instances'
-             'haskell-tasty' 'haskell-tasty-hunit' 'haskell-tasty-quickcheck')
+makedepends=('ghc')
+checkdepends=('haskell-doctest' 'haskell-pgp-wordlist' 'haskell-quickcheck-instances'
+              'haskell-tasty' 'haskell-tasty-hunit' 'haskell-tasty-quickcheck')
 source=(https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz)
 sha512sums=('26289e579cc1a2826dc11daedbdfd5ce31acf4a2382f827c20194d910f05201e3f332a6544aa0c3f941188d9eaee8d6dee3cf3d319dc3c5a7bfe4f35d77b4dd9')
 
 build() {
     cd $_hkgname-$pkgver
-    
+
+    if (( CHECKFUNC )); then
+        _opts=('--enable-tests')
+    else
+        _opts=('--disable-tests')
+    fi
+
     runhaskell Setup configure -O --enable-shared --enable-debug-info --enable-executable-dynamic --disable-library-vanilla \
-        --prefix=/usr --docdir=/usr/share/doc/$pkgname --datasubdir=$pkgname --enable-tests \
+        --prefix=/usr --docdir=/usr/share/doc/$pkgname --datasubdir=$pkgname "${_opts[@]}" \
         --dynlibdir=/usr/lib --libsubdir=\$compiler/site-local/\$pkgid \
             -f-buildReadme
     runhaskell Setup build $MAKEFLAGS
