Updated haskell-bytestring-handle 0.1.0.6-199

--- a/extra/haskell-bytestring-handle/PKGBUILD
+++ b/extra/haskell-bytestring-handle/PKGBUILD
@@ -3,10 +3,10 @@
 _hkgname=bytestring-handle
 pkgname=haskell-bytestring-handle
 pkgver=0.1.0.6
-pkgrel=197
+pkgrel=199
 pkgdesc="ByteString-backed Handles"
 url="http://hub.darcs.net/ganesh/bytestring-handle"
-license=("BSD")
+license=('BSD-3-Clause')
 arch=('x86_64')
 depends=('ghc-libs')
 makedepends=('ghc' 'uusi' 'haskell-hunit' 'haskell-quickcheck' 'haskell-test-framework'
