--- a/extra/haskell-ansi-wl-pprint/PKGBUILD
+++ b/extra/haskell-ansi-wl-pprint/PKGBUILD
@@ -3,21 +3,16 @@
 
 _hkgname=ansi-wl-pprint
 pkgname=haskell-ansi-wl-pprint
-pkgver=0.6.9
-pkgrel=479
+pkgver=1.0.2
+pkgrel=3
 pkgdesc="The Wadler/Leijen Pretty Printer for colored ANSI terminal output"
 url="https://github.com/ekmett/ansi-wl-pprint"
-license=("BSD")
+license=('BSD-3-Clause')
 arch=('x86_64')
-depends=('ghc-libs' 'haskell-ansi-terminal')
-makedepends=('ghc' 'uusi')
+depends=('ghc-libs' 'haskell-prettyprinter-compat-ansi-wl-pprint')
+makedepends=('ghc')
 source=("https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz")
-sha512sums=('2a66236f740f0b45b6133555e8b1315dc85ece1c16dd51e4aa7f31d2fee03d66869af5f81e6383aa840f503c2cad46f3655f53b784ebca7b3480efb53eea2a04')
-
-prepare() {
-    cd $_hkgname-$pkgver
-    uusi -u ansi-terminal
-}
+sha512sums=('2b6db1f25b180f53f2a81d2658d36f91d7b112aa242709e0693712ea6974cb0790ea56789678e714cd572ea226f2803484af572ae6fc7c4dc84536020701e3ac')
 
 build() {
     cd $_hkgname-$pkgver
