--- a/extra/stack/REUSE.toml
+++ b/extra/stack/REUSE.toml
@@ -25,6 +25,7 @@ SPDX-License-Identifier = "0BSD"
 path = [
     "stack-persistent-2.14.patch",
     "stack-pantry-0.6.patch",
+    "optparse-applicative-0.18.patch",
 ]
 SPDX-FileCopyrightText = "stack contributors"
 SPDX-License-Identifier = "BSD-3-Clause"
