--- a/extra/haskell-floskell/REUSE.toml
+++ b/extra/haskell-floskell/REUSE.toml
@@ -20,3 +20,10 @@ path = [
 ]
 SPDX-FileCopyrightText = "Arch Linux contributors"
 SPDX-License-Identifier = "0BSD"
+
+[[annotations]]
+path = [
+    "optparse-applicative-0.18.patch",
+]
+SPDX-FileCopyrightText = "haskell-floskell contributors"
+SPDX-License-Identifier = "BSD-3-Clause"
