--- a/extra/jenkins/REUSE.toml
+++ b/extra/jenkins/REUSE.toml
@@ -9,6 +9,7 @@ path = [
     ".nvchecker.toml",
     "*.install",
     "*.sysusers",
+    "*.conf",
     "*.tmpfiles",
     "*.logrotate",
     "*.pam",
@@ -17,13 +18,7 @@ path = [
     "*.timer",
     "*.desktop",
     "*.hook",
+    "skip-failing-test.patch",
 ]
 SPDX-FileCopyrightText = "Arch Linux contributors"
 SPDX-License-Identifier = "0BSD"
-
-[[annotations]]
-path = [
-    "skip-failing-test.patch",
-]
-SPDX-FileCopyrightText = "jenkins contributors"
-SPDX-License-Identifier = "MIT"
