--- a/extra/perl-crypt-cbc/PKGBUILD
+++ b/extra/perl-crypt-cbc/PKGBUILD
@@ -3,16 +3,16 @@
 # Contributor: Francois Charette <firmicus@gmx.net>
 
 pkgname=perl-crypt-cbc
-pkgver=3.04
-pkgrel=5
+pkgver=3.07
+pkgrel=1
 pkgdesc="Cipherblock chaining for Crypt::DES/IDEA"
 arch=('any')
 depends=('perl')
 url="https://search.cpan.org/dist/Crypt-CBC"
 license=('GPL' 'PerlArtistic')
 options=('!emptydirs')
-source=(https://www.cpan.org/authors/id/L/LD/LDS/Crypt-CBC-$pkgver.tar.gz)
-sha256sums=('4026c57d0dbf6496c0d561a26f161b763d3b8edf351139c073492e21b5fbce07')
+source=(https://cpan.metacpan.org/authors/id/T/TI/TIMLEGGE/Crypt-CBC-$pkgver.tar.gz)
+sha256sums=('f4ddfb4dd6ac5013df8341bfa734d9c9ee0f10e2e71215ec8fe5bf780b7c9127')
 
 build() {
   cd  "$srcdir"/Crypt-CBC-$pkgver
