--- a/extra/haskell-unix-time/PKGBUILD
+++ b/extra/haskell-unix-time/PKGBUILD
@@ -3,17 +3,17 @@
 
 _hkgname=unix-time
 pkgname=haskell-unix-time
-pkgver=0.4.16
-pkgrel=16
+pkgver=0.4.17
+pkgrel=2
 pkgdesc="Unix time parser/formatter and utilities"
 url="https://hackage.haskell.org/package/${_hkgname}"
-license=("BSD")
+license=('BSD-3-Clause')
 arch=('x86_64')
 depends=('ghc-libs' 'haskell-old-time')
 makedepends=('ghc' 'haskell-cabal-doctest' 'haskell-doctest' 'haskell-hspec' 'haskell-old-locale'
              'haskell-quickcheck')
 source=("https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz")
-sha512sums=('1fc6119d095c87621eeb4eb9fc6e5cf16c0071680b089c487f9e0a6cb8f74afeaa1c372f9a2615b7eb5fe18af341b95475266c3e74c75e4d1e98cb472d711766')
+sha512sums=('9e1da62120c0eeb7dd5bc53d24214f9a1007304f957761933d7c74fc03335056b7be5520461bf53bd5fea87221c2a2590edf648c631887c641f6b264b522a32e')
 
 build() {
     cd $_hkgname-$pkgver
