--- a/extra/deskflow/PKGBUILD
+++ b/extra/deskflow/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=deskflow
-pkgver=1.22.0
+pkgver=1.23.0
 pkgrel=1
 pkgdesc='Share one mouse and keyboard between multiple computers'
 url='https://deskflow.org/'
@@ -40,8 +40,8 @@ makedepends=(
   xorgproto
 )
 source=("git+https://github.com/deskflow/deskflow.git#tag=v${pkgver}")
-sha256sums=('9d6c5b92787695489d1414b4d0b0170635aae4035d705375bf9f7818d1a4dfb0')
-b2sums=('54b89b643dd874ec9896d3e810b26406f774ea2f9cd7828e114d78dc95cd8e37555b31e23704324baa45bdd1d97183eb712042f591fa5070b440900265bd0dcf')
+sha256sums=('25dd0db9ba3b7ef7b3080ceafd08317d2138ae29461ee462aa5be9bd2f16b67e')
+b2sums=('941a0959005260ea156d4356368c04c46c15ce4cdc88c754a52a15d41ee13b45ac26dc8f5e93c3ae3c4c1c37cda6cd8460ddc28885b73a4bf9c0677e91ef0cc2')
 
 build() {
   cd "${pkgname}"
@@ -68,7 +68,7 @@ check() {
 package() {
   cd "${pkgname}"
   DESTDIR="${pkgdir}" cmake --install build
-  install -Dm 644 README.md doc/configuration.md -t "${pkgdir}/usr/share/doc/${pkgname}"
+  install -Dm 644 README.md doc/user/configuration.md -t "${pkgdir}/usr/share/doc/${pkgname}"
 }
 
 # vim: ts=2 sw=2 et:
