--- a/extra/pioneer/PKGBUILD
+++ b/extra/pioneer/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Tarn Burton <twburton at gmail dot com>
 
 pkgname=pioneer
-pkgver=20250203
-pkgrel=2
+pkgver=20250501
+pkgrel=1
 pkgdesc="A game of lonely space adventure"
 arch=('x86_64')
 url="https://github.com/pioneerspacesim/pioneer"
@@ -23,7 +23,7 @@ depends=(
 )
 makedepends=('cmake' 'ninja')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/pioneerspacesim/pioneer/archive/$pkgver.tar.gz")
-sha256sums=('5b2814ad63b9b7f995fd6a1b913f97d00b450663d07cfbae59c88cccb97d5604')
+sha256sums=('959902d98a79536bd44f25bd7b29e48da94aeac597228776b0f91635877f362e')
 
 prepare() {
     cd "$pkgname-$pkgver"
@@ -41,6 +41,7 @@ build() {
           -D USE_SYSTEM_LIBLUA:BOOL=ON \
           -D USE_SSE42:BOOL=OFF \
           -D CMAKE_EXPORT_COMPILE_COMMANDS=1 \
+          -DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
           -Wno-dev
 
     cmake --build build --target all build-data
