--- a/extra/deepin-qt5platform-plugins/PKGBUILD
+++ b/extra/deepin-qt5platform-plugins/PKGBUILD
@@ -1,18 +1,18 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=deepin-qt5platform-plugins
-pkgver=5.7.13
+pkgver=5.7.14
 pkgrel=1
 pkgdesc='Qt platform plugins for DDE'
 arch=('x86_64')
 url="https://github.com/linuxdeepin/qt5platform-plugins"
-license=('LGPL3')
+license=('LGPL-3.0-or-later')
 depends=('qt5-base' 'qt5-x11extras' 'libx11' 'libxi' 'libxcb' 'xcb-util-wm' 'glibc' 'gcc-libs')
 makedepends=('git' 'cmake' 'ninja' 'qt5-tools' 'qt5-xcb-private-headers' 'libglvnd' 'gtest'
              'extra-cmake-modules' 'dtkcommon' 'cairo')
 groups=('deepin')
 source=("git+https://github.com/linuxdeepin/qt5platform-plugins.git#tag=$pkgver")
-sha512sums=('a0ed2af1471e1f14d48d65c33e74301bf4fd49e9ac3f8912c388f56615b2cb3ab185879790ded2aa66c2f1688ab1bf79db72e98ca69c0913012109d9935bd9d9')
+sha512sums=('fd1cf2812034298aed52b29cbe108c18e507a1ee72d7ec5a41cc5437d0498a4de424d34502b03fb989627689b20e5cb08a2013da0b53dd2f13edd3e739c59947')
 
 prepare() {
   cd qt5platform-plugins
