--- a/extra/haskell-text-show/PKGBUILD
+++ b/extra/haskell-text-show/PKGBUILD
@@ -2,22 +2,22 @@
 
 _hkgname=text-show
 pkgname=haskell-text-show
-pkgver=3.10.3
-pkgrel=57
+pkgver=3.10.4
+pkgrel=2
 pkgdesc="Efficient conversion of values into Text"
 url="https://github.com/RyanGlScott/text-show"
-license=('BSD')
+license=('BSD-3-Clause')
 arch=('x86_64')
 depends=('ghc-libs' 'haskell-base-compat-batteries' 'haskell-bifunctors' 'haskell-generic-deriving'
          'haskell-th-abstraction' 'haskell-th-lift' 'haskell-transformers-compat')
 makedepends=('ghc' 'uusi' 'haskell-base-orphans' 'haskell-deriving-compat' 'haskell-hspec'
              'haskell-quickcheck' 'haskell-quickcheck-instances')
 source=(https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz)
-sha512sums=('323177fdf5a44551f2ad8c87360ed9a38e518943a70d0ef92f55ee3f882a191787efb66bbdc1ed6b5aa506e6dca27ce0df1202bfce70cc51985a7441b2a1d4be')
+sha512sums=('f74eec545cd2994b3ebde9552e15e8b26c60ff00f6438f0c7bc2d92148a34fa85d41b8c04de0a960d468bc928346a5a8cd676a604f9dd81fc14d2ad5667a9d7f')
 
 prepare() {
     cd $_hkgname-$pkgver
-    uusi -d bytestring-builder $_hkgname.cabal
+    uusi -d bytestring-builder
 }
 
 build() {
