--- a/extra/haskell-arch-web/PKGBUILD
+++ b/extra/haskell-arch-web/PKGBUILD
@@ -3,7 +3,7 @@
 _hkgname=arch-web
 pkgname=haskell-arch-web
 pkgver=0.3.1
-pkgrel=50
+pkgrel=51
 pkgdesc="Arch Linux official and AUR web interface binding"
 url="https://github.com/berberman/arch-web"
 license=("MIT")
@@ -18,6 +18,7 @@ sha256sums=('15576d714bf6d918b16cd3abdb5cadb96b92a00d3cbf592088e74edd00751ffd')
 prepare() {
   cd $_hkgname-$pkgver
   gen-setup
+  uusi -u lens
 }
 
 build() {
