--- a/extra/haskell-clash-prelude/PKGBUILD
+++ b/extra/haskell-clash-prelude/PKGBUILD
@@ -3,7 +3,7 @@
 _hkgname=clash-prelude
 pkgname=haskell-clash-prelude
 pkgver=1.8.1
-pkgrel=96
+pkgrel=97
 pkgdesc="Clash: a functional hardware description language - Prelude library"
 url="https://github.com/clash-lang/clash-prelude"
 license=('BSD')
@@ -24,6 +24,7 @@ sha512sums=('a61271f0f1e14fd1301b6c73df81d7241d53cb5e72ddf4ffe4b0953909f2ddb919b
 prepare() {
     cd $_hkgname-$pkgver
     gen-setup
+    uusi -u lens
 }
 
 build() {
