--- a/extra/chromium/REUSE.toml
+++ b/extra/chromium/REUSE.toml
@@ -17,6 +17,7 @@ path = [
     "*.timer",
     "*.desktop",
     "*.hook",
+    "fetch-chromium-release",
 ]
 SPDX-FileCopyrightText = "Arch Linux contributors"
 SPDX-License-Identifier = "0BSD"
