--- a/extra/bitwarden-cli/PKGBUILD
+++ b/extra/bitwarden-cli/PKGBUILD
@@ -1,20 +1,18 @@
-# Maintainer: Alexander Epaneshnikov <alex19ep@archlinux.com>
+# Maintainer: Alexander Epaneshnikov <alex19ep@archlinux.org>
 # Contributor: libertylocked <libertylocked@disroot.org>
 
 pkgname=bitwarden-cli
-pkgver=2025.5.0
-pkgrel=3
+pkgver=2025.7.0
+pkgrel=1
 pkgdesc="The command line vault"
 arch=('x86_64')
 url="https://github.com/bitwarden/clients"
 license=('GPL-3.0-only')
-depends=('nodejs-lts-iron' 'argon2' 'semver')
+depends=('nodejs-lts-jod' 'argon2' 'semver')
 makedepends=('git' 'python' 'python-setuptools' 'npm' 'modclean' 'fdupes')
 options=(!emptydirs)
-source=(bitwarden::git+https://github.com/bitwarden/clients.git#tag=cli-v${pkgver}
-        system-libargon2.patch)
-sha512sums=('4dc19be07cf34fd15cd384523ee1d3756b8394f3d78da31919fd49a142df31159459ab461b410fb5f56669af12ac56512e2ca4f1cc1f5be5aaf4c5db86338b53'
-            '6970261c24d8056b001f4ff308af7b9be67ef638be28f54f7c08ee4bed9ad895145a6cedf9a3cbda61b023104c50a6758a8bfcc8bc40097a298b98b60b1ffee7')
+source=(bitwarden::git+https://github.com/bitwarden/clients.git#tag=cli-v${pkgver})
+sha512sums=('652fb753e14ee83e964d9820d966206d51b186d183a5c4575cf0ccff5f63df8c178dbff5c238f5d96da5de639a7861c85acc965bdc76dc5ae4c4324591d4366f')
 
 prepare() {
 	cd bitwarden
@@ -27,7 +25,6 @@ prepare() {
 	export npm_config_cache="$srcdir/npm_cache"
 
 	npm ci
-	patch -p1 -i "$srcdir/system-libargon2.patch"
 }
 
 build() {
@@ -58,7 +55,6 @@ package() {
 	install -vDm644 _bw -t "${pkgdir}/usr/share/zsh/site-functions"
 
 	# cleanup
-	rm -vr "$pkgdir"/usr/lib/node_modules/@bitwarden/cli/node_modules/argon2/prebuilds/
 	sed -e "s|${srcdir}|/|" -i "$pkgdir"/usr/lib/node_modules/@bitwarden/cli/package.json
 	find "$pkgdir"/usr/lib/node_modules -name 'package.json' -exec sed -e "s|${srcdir}||" -i {} \;
 	modclean --path "$pkgdir"/usr/lib -r -a "*.ts,.bin,.github,.vscode,bin.js" --ignore='license'
